--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@
   font-family: Dratewka;
   -moz-user-select: none;
   user-select: none;
-  image-rendering: crisp-edges;
-  -moz-image-rendering: crisp-edges;
+  /* image-rendering: crisp-edges;
+  -moz-image-rendering: crisp-edges; */
   outline: none;
 }
 body {
@@ -25,7 +25,7 @@ body {
   font-size: 1.2em;
   overflow: hidden;
 }
-img {
+#comp {
   image-rendering: crisp-edges;
   -moz-image-rendering: crisp-edges;
 }
@@ -109,8 +109,8 @@ img {
 }
 .winImg {
   width: 100%;
-  height: 100%;
-  background-size: contain;
+  background-size: auto;
+  margin: 0 auto;
 }
 .winText {
   position: absolute;
@@ -127,4 +127,18 @@ img {
      2px  2px 0 #000;
   line-height: 150px;
   font-size: 2em;
+}
+
+#instr {
+  position: fixed;
+  left: unset;
+  top: unset;
+  bottom: 10px;
+  right: 10px;
+  width: 250px;
+}
+.instrText {
+  max-width: 760px;
+  max-height: 500px;
+  overflow: hidden auto;
 }
